-> 1.21.5 flavor for version 1.3.0 of the mod -> See related commit of 1.20.1 flavor for more information. -> Also patches some teleporting issues, will be backported before releasing 1.3.0